<resources>
    <string name="app_name">Cork</string>
    <string name="identify">Identifica\'t!</string>
    <string name="laintersindical">La Intersindical</string>
    <string name="login">Entrar!</string>
    <string name="visited">Marca el centre com a visitat!</string>
    <string name="noschool">No trobo cap escola</string>
    <string name="welcome">Benvingut!</string>
    <string name="invalidlogin">Número d\'identifiació incorrecte!</string>
    <string name="loadcentres">Actualitza la base de dades dels centres</string>
    <string name="searchSchool">Cerca el centre educatiu més proper</string>
    <string name="email">Correu electrònic</string>
    <string name="password">Contrasenya</string>
</resources>