<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/intersindical"
        android:contentDescription="@string/laintersindical" />

    <TextView
        android:id="@+id/identificat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify" />

    <EditText
        android:id="@+id/nif"
        android:hint="@string/nif"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:inputType="numberDecimal"
        android:autofillHints="username" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noschool" />

    <Button
            android:id="@+id/visitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visited" />
    <Button
            android:id="@+id/loadCentresButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadcentres" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>